updated arduino code

--- a/trolley_arduino/platformio.ini
+++ b/trolley_arduino/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 ; upload_protocol = serial
 ; monitor_speed = 115200
 lib_deps = arduino-libraries/Servo@^1.2.1
+            paulstoffregen/TimerOne@^1.1.1
