updated description and photos

--- a/trolley_arduino/platformio.ini
+++ b/trolley_arduino/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:uno]
 platform = atmelavr
-board = uno
+board = uno212211
+
 framework = arduino
 ; upload_protocol = serial
 ; monitor_speed = 115200
